increment version after publish to 2.0.294 and update changelog [skip ci]